# raspberryip

./: CMakeLists.txt  Makefile  popotwo
include/: def.h  raspberrypii2c.h
src/: main.cpp  raspberrypii2c.c
